# DeepMusician

./: .dockerignore  .gitignore  Dockerfile.dockerfile  README.md  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
app/: app.py
app/static/css/: style.css
app/templates/: index.html
data/: README.md  dl_bitmidi.py  download.sh
deepmusician/: __init__.py  seq2seq.py  utils_app.py  utils_music21.py  utils_pretty_midi.py
presentation/: presentation.tex
report/: report.tex
scripts/: generate.py  train.py
tests/: test_postprocess.py  test_preprocess.py  test_train.py
