[project]
name = "DeepMusician"
authors = [{ author = "Fabian Gabelberger", email = "falseazure@proton.me" }]
version = "0.0.1"
readme = "README.md"
keywords = [
    "music",
    "deep learning",
    "neural networks",
    "LSTM",
    "RNN",
    "machine learning",
]
description = "DeepMusician: A Deep Learning Approach to Music Generation"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests==2.28.1",
    "numpy==1.23.3",
    "scipy==1.9.3",
    "pandas==1.5.1",
    "torch==1.13",
    "pytorch-lightning==1.8.3",
    "wandb==0.13.5",
    "mido==1.2.10",
    "music21==8.1.0",
    "pretty_midi==0.2.9",
    "black==22.10.0",
    "flake8==5.0.4",
    "pytest==7.2.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --showlocals"
testpaths = ["tests"]
