[project]
name = "deepmusician"
authors = [{ author = "Fabian Gabelberger", email = "falseazure@proton.me" }]
version = "0.0.1"
readme = "README.md"
keywords = [
    "music",
    "deep learning",
    "neural networks",
    "LSTM",
    "RNN",
    "machine learning",
]
description = "DeepMusician: A Deep Learning Approach to Music Generation"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests==2.28.1",
    "dill==0.3.6",
    "numpy==1.23.3",
    "scipy==1.9.3",
    "pandas==1.5.1",
    "seaborn==0.12.1",
    "matplotlib==3.6.2",
    "torch==1.13",
    "pytorch-lightning==1.8.4.post0",
    "tensorboard==2.11.0",
    "wandb==0.13.5",
    "mido==1.2.10",
    "music21==8.1.0",
    "pretty_midi==0.2.9",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
packages = ["deepmusician"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --showlocals"
testpaths = ["tests"]
